--- a/Linky.DataAccessLayer/Linky.DataAccessLayer.csproj
+++ b/Linky.DataAccessLayer/Linky.DataAccessLayer.csproj
@@ -57,7 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Abstract\ILinkRepository.cs" />
     <Compile Include="Repositories\Concrete\BaseRepository.cs" />
+    <Compile Include="Repositories\Concrete\LinkRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Linky.Entities\Linky.Entities.csproj">
@@ -69,8 +71,6 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\Abstract\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
