--- a/LinkyMVC/LinkyMVC.csproj
+++ b/LinkyMVC/LinkyMVC.csproj
@@ -200,6 +200,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\InputModels\LinkInputModel.cs" />
+    <Compile Include="Models\InputModels\LinkUpdateModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
