--- a/LinkyMVC/packages.config
+++ b/LinkyMVC/packages.config
@@ -4,6 +4,9 @@
   <package id="AutoMapper" version="10.1.1" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
+  <package id="FluentValidation" version="8.6.1" targetFramework="net472" />
+  <package id="FluentValidation.Mvc5" version="8.6.1" targetFramework="net472" />
+  <package id="FluentValidation.ValidatorAttribute" version="8.6.1" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
@@ -42,6 +45,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="Unity.Abstractions" version="5.11.1" targetFramework="net472" />
