--- a/Linky.DataAccessLayer/Linky.DataAccessLayer.csproj
+++ b/Linky.DataAccessLayer/Linky.DataAccessLayer.csproj
@@ -57,8 +57,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Abstract\ICountryCounterRepository.cs" />
     <Compile Include="Repositories\Abstract\ILinkRepository.cs" />
     <Compile Include="Repositories\Concrete\BaseRepository.cs" />
+    <Compile Include="Repositories\Concrete\CountryCounterRepository.cs" />
     <Compile Include="Repositories\Concrete\LinkRepository.cs" />
   </ItemGroup>
   <ItemGroup>
