--- a/Linky.Entities/Linky.Entities.csproj
+++ b/Linky.Entities/Linky.Entities.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="AppDbContext.cs" />
     <Compile Include="Configurations\ApplicationUserConfiguration.cs" />
+    <Compile Include="Configurations\CountryCounterConfiguration.cs" />
     <Compile Include="Configurations\LinkConfiguration.cs" />
     <Compile Include="Identity\ApplicationUser.cs" />
     <Compile Include="Migrations\202101151936469_InitEntities.cs" />
@@ -68,7 +69,12 @@
     <Compile Include="Migrations\202101161410324_ChangeLinkCreatedDate.Designer.cs">
       <DependentUpon>202101161410324_ChangeLinkCreatedDate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101171229000_AddCountryCounters.cs" />
+    <Compile Include="Migrations\202101171229000_AddCountryCounters.Designer.cs">
+      <DependentUpon>202101171229000_AddCountryCounters.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\CountryCounter.cs" />
     <Compile Include="Models\Link.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -82,6 +88,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101161410324_ChangeLinkCreatedDate.resx">
       <DependentUpon>202101161410324_ChangeLinkCreatedDate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101171229000_AddCountryCounters.resx">
+      <DependentUpon>202101171229000_AddCountryCounters.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
