--- a/Linky.DataAccessLayer/Linky.DataAccessLayer.csproj
+++ b/Linky.DataAccessLayer/Linky.DataAccessLayer.csproj
@@ -58,9 +58,11 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Abstract\ICountryCounterRepository.cs" />
+    <Compile Include="Repositories\Abstract\IDailyCounterRepository.cs" />
     <Compile Include="Repositories\Abstract\ILinkRepository.cs" />
     <Compile Include="Repositories\Concrete\BaseRepository.cs" />
     <Compile Include="Repositories\Concrete\CountryCounterRepository.cs" />
+    <Compile Include="Repositories\Concrete\DailyCounterRepository.cs" />
     <Compile Include="Repositories\Concrete\LinkRepository.cs" />
   </ItemGroup>
   <ItemGroup>
